--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.4.1",
